# typed_tuple

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml  security.yml
src/: arithmetic.rs  chain.rs  indexed_tuple.rs  last_index.rs  lib.rs  nth_index.rs  tuple_index.rs  tuple_key.rs  typed_bound.rs  typed_bounds.rs  typed_extract.rs  typed_first.rs  typed_index.rs  typed_last.rs  typed_nth.rs  typed_ref.rs  typed_split.rs  typed_tuple.rs  typed_tuple_ext.rs  typed_until.rs  typed_until_as.rs
tests/: blanket_traits.rs  index_arithmetic_tests.rs  last_marker_tests.rs  new_methods_tests.rs  pop_tests.rs  saturating_index_tests.rs  split_methods_tests.rs  tuple_tests.rs  typed_until_as_tests.rs
typed_tuple_macros/: Cargo.toml
typed_tuple_macros/src/: lib.rs  typed_bound.rs  typed_extract.rs  typed_index.rs  typed_split.rs
