[package]
name = "typed_tuple"
authors = ["Christopher Edward Dawn"]
version = "0.1.0"
edition = "2024"
description = "Type based operations on primitive tuple elements."
readme = "README.md"
repository = "https://github.com/cedtwo/typed_tuple.git"
license = "MIT OR Apache-2.0"
keywords = ["tuple", "type", "typed", "heterogenous"]
categories = ["data-structures", "rust-patterns"]

[features]
default = []
len_128 = []

[dependencies]
typed_tuple_macros = { path = "typed_tuple_macros" }

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.clippy]
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }
