[package]
name = "typed_tuple"
authors = ["Christopher Edward Dawn"]
version = "0.2.1"
edition = "2024"
description = "Type-safe access, isolation and mutation of primitive tuple segments and elements."
readme = "README.md"
repository = "https://github.com/cedtwo/typed_tuple.git"
license = "MIT OR Apache-2.0"
keywords = ["tuple", "type", "typed", "heterogenous"]
categories = ["data-structures", "rust-patterns"]

[features]
default = ["index", "split", "extract"]
index = []
split = []
extract = []

[dependencies]
typed_tuple_macros = "0.1.0"
