[package]
name = "typed_tuple_macros"
authors = ["Christopher Edward Dawn"]
version = "0.1.0"
edition = "2024"
description = "Macro generation for the typed_tuple crate"
repository = "https://github.com/cedtwo/typed_tuple.git"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
